ADJ: transform, and getBoundingClientRect()

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <ul class="cool">
         <li>
           <a href="#">About</a>
-          <div class="dropdown">
+          <div class="dropdown dropdown-1">
             <div class="bio">
               <img
                 src="img/Makis.jpg"
                 alt="Makis"
-                width="10%"
+                width="20%"
                 style="border-radius: 50%"
               />
 
@@ -37,7 +37,7 @@
         <!-- Courses -->
         <li>
           <a href="#">Courses</a>
-          <div class="dropdown">
+          <div class="dropdown dropdown-2">
             <div class="bio">
               <p>
                 JavaScript for Beginners by Jonas Schmedtmann on Udemy
